--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -34,7 +34,7 @@ apps:
     desktop: usr/share/applications/net.lutris.Lutris.desktop 
     environment:
       GTK_USE_PORTAL: "1"
-      #HOME: $SNAP_USER_COMMON
+      HOME: $SNAP_USER_COMMON
       TMPDIR: $XDG_RUNTIME_DIR
     plugs:
       - home
