--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: lutris
 base: core22
-version: '0.5.12'
+version: 0.5.12
 summary: Video game preservation platform.
 description: |
    Lutris helps you install and play video games from all eras and from most gaming systems. 
@@ -76,7 +76,7 @@ slots:
 
 parts:
   lutris:
-    source: https://github.com/lutris/lutris/releases/download/v0.5.12/lutris_$CRAFT_PROJECT_VERSION_all.deb
+    source: https://github.com/lutris/lutris/releases/download/v0.5.12/lutris_0.5.12_all.deb
     after: [gamemode]
     plugin: dump
     stage-packages:
