--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -105,7 +105,7 @@ parts:
       - python3-setproctitle
       - python3-yaml
       - unzip
-      - wine
+      - winehq-stable
       - x11-xserver-utils
       - xterm
       - xz-utils
