--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -3,6 +3,7 @@ confinement: strict
 base: core22
 grade: stable
 adopt-info: lutris
+compression: lzo
 architectures:
   - build-on: amd64
   - build-on: arm64
