--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -6,7 +6,8 @@ adopt-info: lutris
 compression: lzo
 architectures:
   - build-on: amd64
-  
+    build-for: amd64
+    
 package-repositories:
   - type: apt
     components: [main]
