--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -62,7 +62,7 @@ parts:
       gnome-extension-hack: bin/gnome-extension-hack
 
   lutris:
-    after: [enable-i386]
+    after: [enable-i386, gamemode]
     plugin: python
     source: https://github.com/lutris/lutris.git
     parse-info: [share/metainfo/net.lutris.Lutris.metainfo.xml]
@@ -83,7 +83,23 @@ parts:
       # WORKAROUND: Use python from search path, the path detected by meson doesn't exist when running the Snap
       sed -e '1c#!/usr/bin/env python3' -i ${CRAFT_PART_INSTALL}/snap/lutris/current/bin/lutris
     
-    
+  gamemode:
+    source: https://github.com/ashuntu/gamemode.git
+    source-branch: "add-snap-support"
+    plugin: meson
+    organize:
+      snap/lutris/current/usr: usr
+    meson-parameters:
+      - --prefix=/usr
+    build-packages:
+      - libsystemd-dev
+      - pkg-config
+      - libdbus-1-dev
+    prime:
+      - usr/bin/gamemoderun
+      - usr/lib/*/libgamemode*.so.*
+  
+  
   lutris-runtime:
     after: [enable-i386]
     plugin: nil
