--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -89,7 +89,7 @@ parts:
     override-build: |
       craftctl default
       # WORKAROUND: Use python from search path, the path detected by meson doesn't exist when running the Snap
-      sed -e '1c#!/usr/bin/env python3' -i ${CRAFT_PART_INSTALL}/snap/lutris/current/bin/lutris
+      sed -e '1c#!/usr/bin/env python3' -i ${CRAFT_PART_INSTALL}/bin/lutris
     stage:
       # WORKAROUND: Skip venv from python plugin
       - -bin/activate
