Add craftctl set version

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -164,7 +164,7 @@ parts:
       WINE_VER="8.0.1"
 
       # set snap version
-      craftctl set-version "$WINE_VER"
+      craftctl set version="$WINE_VER"
 
       # wget and dpkg extract the wine debs
       ## supporting binaries which are arch-specific but the same filenames in both architectures so we only install the native architecture
