--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -57,7 +57,7 @@ parts:
     after: [enable-i386]
     plugin: python
     python-version: python3
-    source: .
+    source: https://github.com/lutris/lutris.git
     parse-info: [share/metainfo/net.lutris.Lutris.metainfo.xml]
     override-pull: |
       snapcraftctl pull
