--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -6,7 +6,7 @@ adopt-info: lutris
 compression: lzo
 architectures:
   - build-on: amd64
-  - run-on: amd64
+    run-on: amd64
 
 parts:
   extensible-hooks:
