--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -85,6 +85,13 @@ slots:
     bus: session
     name: net.lutris.Lutris
 
+plugs:
+  wine-7-devel:
+    interface: content
+    target: $SNAP/wine-platform
+    default-provider: wine-platform-7-devel-core20 
+
+
 environment:
   HOME: $SNAP_USER_COMMON
   LD_LIBRARY_PATH: $SNAP/usr/lib/i386-linux-gnu:$SNAP/lib/i386-linux-gnu:$LD_LIBRARY_PATH:$LIBGL_DRIVERS_PATH
