--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -64,6 +64,10 @@ plugs:
     interface: content
     target: $SNAP/graphics
     default-provider: mesa-core22
+  wine-latest:
+    interface: content
+    target: $SNAP/wine-platform
+    default-provider: wine-latest  
   
   
 slots:    
