--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -88,7 +88,7 @@ parts:
     override-pull: |
       craftctl default
       craftctl set version=$(git describe --tags --abbrev=0)
-      sed -i 's|Icon=.*|Icon=${SNAP}/share/icons/hicolor/scalable/apps/lutris.svg|' share/applications/net.lutris.Lutris.desktop
+      sed -e 's|Icon=net.lutris.Lutris|Icon=${SNAP}/usr/share/icons/hicolor/scalable/apps/lutris -i data/net.lutris.Lutris.desktop
     override-build: |
       craftctl default
       # WORKAROUND: Use python from search path, the path detected by meson doesn't exist when running the Snap
