--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -82,6 +82,7 @@ parts:
   lutris:
     source: https://github.com/lutris/lutris.git
     after: [gamemode, lutris-runtime, enable-i386]
+    source-tag: v0.5.12
     plugin: meson
     parse-info: [share/metainfo/net.lutris.Lutris.metainfo.xml]
     meson-parameters:
