ReAdd Wine plugs and ReFix Env Variables

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -21,15 +21,17 @@ layout:
   /usr/share/X11/locale:
     symlink: $SNAP/graphics/usr/share/X11/locale  
       
+environment:
+  PYTHONPATH: ${SNAP}/usr/lib/python3/dist-packages:$PYTHONPATH
+  HOME: $SNAP_USER_COMMON
+
+
 apps:
   lutris:
     command-chain:
     - bin/graphics-core22-wrapper
     command: usr/bin/lutris
     extensions: [gnome]
-    environment:
-      PYTHONPATH: ${SNAP}/usr/lib/python3/dist-packages:$PYTHONPATH
-      HOME: $SNAP_USER_COMMON
     common-id: net.lutris.Lutris 
     desktop: usr/share/applications/net.lutris.Lutris.desktop 
     plugs:
@@ -56,6 +58,10 @@ plugs:
     interface: content
     target: $SNAP/graphics
     default-provider: mesa-core22
+  wine-latest:
+    interface: content
+    target: $SNAP/wine-platform
+    default-provider: wine-latest  
   
 slots:    
   lutris:
