--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -10,7 +10,19 @@ compression: lzo
 architectures:
   - build-on: amd64
     build-for: amd64
-    
+assumes:
+  - snapd2.55.4
+  
+lint:
+  # Snapcraft's `ldd` lint can't handle 32-bit things,
+  # So just make it quiet and also make builds a surprising amount faster
+  ignore:
+    - library:
+        - lib/i386-linux-gnu/**
+        - usr/lib/i386-linux-gnu/**
+        - lib32/**
+        - usr/lib32/**
+ 
 layout:
   /usr/share/libdrm:
     bind: $SNAP/graphics/usr/share/libdrm
@@ -58,10 +70,6 @@ plugs:
     interface: content
     target: $SNAP/graphics
     default-provider: mesa-core22
-  wine-latest:
-    interface: content
-    target: $SNAP/wine-platform
-    default-provider: wine-latest  
   
 slots:    
   lutris:
@@ -129,6 +137,18 @@ parts:
       - pciutils
       - xz-utils
       - libmagic1
+      - wine
+      - mesa-utils
+      - on amd64:
+          - lib32gcc1
+          - libc6-i386
+          - libglu1-mesa:i386
+          - libglvnd0:i386
+          - libglx-mesa0:i386
+          - libgnutls30:i386
+          - libvulkan1:i386
+          - libx11-6:i386
+          - x11-xserver-utils:i386
     stage:
       - -lib/ld-linux.so.2
       - -usr/bin/cpp-7
