--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -106,6 +106,12 @@ parts:
         dpkg --add-architecture i386
         apt update
       fi
+    stage-packages:
+      - libasound2-plugins:i386
+      - libsdl2-2.0-0:i386
+      - libdbus-1-3:i386 
+      - libsqlite3-0:i386
+  
   
   lutris-runtime:
     after: [enable-i386]
@@ -137,7 +143,6 @@ parts:
       - pciutils
       - xz-utils
       - libmagic1
-      - wine
       - mesa-utils
     stage:
       - -lib/ld-linux.so.2
