--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -106,7 +106,12 @@ parts:
         dpkg --add-architecture i386
         apt update
       fi
-   
+    stage-packages:
+      - libvulkan1:i386
+      - libgl1-mesa-dri:i386
+      - mesa-vulkan-drivers:i386
+      - libgnutls30:i386
+      - libgl1-mesa-glx:i386
   
   lutris-runtime:
     after: [enable-i386]
@@ -139,6 +144,9 @@ parts:
       - x11-xserver-utils
       - libc6-i386
       - libmagic1
+      - mesa-utils
+      - libvulkan1
+      - libgnutls30
     stage:
       - -lib/ld-linux.so.2
       - -usr/bin/cpp-7
