--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -108,7 +108,7 @@ parts:
       - libvulkan1:i386
       - libgl1-mesa-dri:i386
       - mesa-vulkan-drivers:i386
-      - libgnutls30:i386
+      #- libgnutls30:i386
       - libgl1-mesa-glx:i386
   
   lutris-runtime:
