--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -9,19 +9,13 @@ confinement: strict
 compression: lzo
 architectures:
   - build-on: amd64
-    build-for: amd64
+    build-on: arm64
+    build-on: armhf
+    
 assumes:
   - snapd2.55.4
 
-package-repositories:
- - type: apt
-   ppa: graphics-drivers/ppa
- - type: apt
-   ppa: kisak/kisak-mesa
-
 lint:
-  # Snapcraft's `ldd` lint can't handle 32-bit things,
-  # So just make it quiet and also make builds a surprising amount faster
   ignore:
     - library:
         - lib/i386-linux-gnu/**
@@ -34,20 +28,41 @@ layout:
     bind: $SNAP/graphics/usr/share/libdrm
   /usr/share/drirc.d:
     symlink: $SNAP/graphics/usr/share/drirc.d
-  /usr/share/X11/XErrorDB:
-    symlink: $SNAP/graphics/usr/share/X11/XErrorDB
-  /usr/share/X11/locale:
-    symlink: $SNAP/graphics/usr/share/X11/locale  
-      
+  /usr/share/glvnd/egl_vendor.d:
+    bind: $SNAP/graphics/usr/share/glvnd/egl_vendor.d
+  /usr/lib/x86_64-linux-gnu/libvulkan_intel.so:
+    symlink: $SNAP/graphics/usr/lib/x86_64-linux-gnu/libvulkan_intel.so
+  /usr/lib/i386-linux-gnu/libvulkan_intel.so:
+    symlink: $SNAP/graphics/usr/lib/i386-linux-gnu/libvulkan_intel.so
+  /usr/lib/x86_64-linux-gnu/libvulkan_lvp.so:
+    symlink: $SNAP/graphics/usr/lib/x86_64-linux-gnu/libvulkan_lvp.so
+  /usr/lib/i386-linux-gnu/libvulkan_lvp.so:
+    symlink: $SNAP/graphics/usr/lib/i386-linux-gnu/libvulkan_lvp.so
+  /usr/lib/x86_64-linux-gnu/libvulkan_radeon.so:
+    symlink: $SNAP/graphics/usr/lib/x86_64-linux-gnu/libvulkan_radeon.so
+  /usr/lib/i386-linux-gnu/libvulkan_radeon.so:
+    symlink: $SNAP/graphics/usr/lib/i386-linux-gnu/libvulkan_radeon.so
+  /usr/lib/x86_64-linux-gnu/libxcb-dri3.so.0.0.0:
+    symlink: $SNAP/graphics/usr/lib/x86_64-linux-gnu/libxcb-dri3.so.0.0.0
+  /usr/lib/x86_64-linux-gnu/libxcb-dri3.so.0:
+    symlink: $SNAP/graphics/usr/lib/x86_64-linux-gnu/libxcb-dri3.so.0.0.0
+  /usr/lib/x86_64-linux-gnu/libxcb.so.1.1.0:
+    symlink: $SNAP/graphics/usr/lib/x86_64-linux-gnu/libxcb.so.1.1.0
+  /usr/lib/x86_64-linux-gnu/libxcb.so:
+    symlink: $SNAP/graphics/usr/lib/x86_64-linux-gnu/libxcb.so.1.1.0
+  /usr/lib/x86_64-linux-gnu/libxcb.so.1:
+    symlink: $SNAP/graphics/usr/lib/x86_64-linux-gnu/libxcb.so.1.1.0
+  /etc/ld.so.cache:
+    bind-file: $SNAP_DATA/etc/ld.so.cache
+  
 environment:
   PYTHONPATH: ${SNAP}/usr/lib/python3/dist-packages:$PYTHONPATH
   HOME: $SNAP_USER_COMMON
-
+  LD_LIBRARY_PATH: $SNAP/graphics/lib/i386-linux-gnu:$SNAP/graphics/usr/lib:$SNAP/usr/lib/i386-linux-gnu:$SNAP/lib/i386-linux-gnu:$SNAP/usr/lib/i386-linux-gnu/pulseaudio${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}
+  LIBGL_DRIVERS_PATH: $SNAP/graphics/usr/lib/i386-linux-gnu/dri:$SNAP/graphics/usr/lib/x86_64-linux-gnu/dri:${LIBGL_DRIVERS_PATH:+:$LIBGL_DRIVERS_PATH}
 
 apps:
   lutris:
-    command-chain:
-    - bin/graphics-core22-wrapper
     command: usr/bin/lutris
     extensions: [gnome]
     common-id: net.lutris.Lutris 
@@ -70,13 +85,13 @@ apps:
       - hardware-observe
       - mount-observe
       - system-observe
-    
+      
 plugs:
-  graphics-core22:
+  gaming-mesa:
     interface: content
     target: $SNAP/graphics
-    default-provider: mesa-core22
-  
+    default-provider: gaming-graphics-core22
+    
 slots:    
   lutris:
     interface: dbus
@@ -85,9 +100,17 @@ slots:
   
 
 parts:
+  i386-repo:
+    plugin: nil
+    override-pull: |
+      if [ ${CRAFT_TARGET_ARCH} = "amd64" ]; then
+        dpkg --add-architecture i386
+        apt-get update
+      fi 
+    
   lutris:
     source: https://github.com/lutris/lutris.git
-    after: [gamemode, lutris-runtime]
+    after: [gamemode, lutris-runtime, i386-repo]
     source-tag: v0.5.13
     plugin: meson
     parse-info: [share/metainfo/net.lutris.Lutris.metainfo.xml]
@@ -105,6 +128,7 @@ parts:
   
   lutris-runtime:
     plugin: nil
+    after:[i386-repo]
     override-build: |
       craftctl default
       dpkg --add-architecture i386
@@ -138,9 +162,8 @@ parts:
       - libc6-i386
       - libmagic1
       - mesa-utils
-      - libvulkan1
       - libgnutls30
-      - libgl1-mesa-dri
+      
     stage:
       - -lib/ld-linux.so.2
       - -usr/bin/cpp-7
@@ -166,12 +189,15 @@ parts:
       - usr/bin/gamemoderun
       - usr/lib/*/libgamemode*.so.*
   
-  graphics-core22:
+  cleanup:
     after: [lutris]
-    source: https://github.com/MirServer/graphics-core22.git
-    plugin: dump
+    plugin: nil
+    build-snaps:
+      - gaming-graphics-core22/kisak-fresh/candidate
     override-prime: |
-      craftctl default
-      ${CRAFT_PART_SRC}/bin/graphics-core22-cleanup mesa-core22 nvidia-core22
-    prime:
-    - bin/graphics-core22-wrapper
+      set -eux
+      cd /snap/gaming-graphics-core22/current/usr/lib
+      find . -type f,l -exec rm -f $CRAFT_PRIME/usr/lib/{} \;
+      cd /snap/gaming-graphics-core22/current/usr/share
+      find . -type f,l -exec rm -f $CRAFT_PRIME/usr/share/{} \;
+
