--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -9,9 +9,7 @@ confinement: strict
 compression: lzo
 architectures:
   - build-on: amd64
-    build-on: arm64
-    build-on: armhf
-    
+    build-for: amd64
 assumes:
   - snapd2.55.4
 
